--- a/views/app.pug
+++ b/views/app.pug
@@ -9,3 +9,4 @@ html(lang="en")
         //- - Shes alive
         p= title
         span= `${Alive}Ok what you mean`
+        h1 Ok this works wierdly enogh
