--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,9 +1,160 @@
-* {
-    &,
-    &:after,
-    &:before {
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
+/*
+    -- TABLE OF CONTENTS --
+     * External Imports
+         * Fonts
+     * Presets & Resets
+         * Elements
+     * Styles & Font
+     * Icons & Buttons
+     * Header
+         * Navbar
+     * Main Content
+     * Layout
+         * Base Layouts
+         * Position
+         * Container
+         * Margins
+             * Dull Margin
+             * Horizontal Margin
+             * Vertical Margin
+         * Paddings
+             * Padding Margin
+             * Horizontal Padding
+             * Vertical Padding
+         * Clearfix
+         * Rows & Columns
+     * Layer
+     * ETC...
+*/
+
+/* -- Fonts -- */
+/*!
+    * font-family: 'Montserrat', sans-serif;
+    * font-family: 'Varela Round', sans-serif;
+    * font-family: 'Bungee Inline', sans-serif;
+    * font-family: 'Material Icons', sans-serif;
+    * font-family: 'Roboto', sans-serif;
+*/
+
+// Variables
+$primary: #4500ff;
+$primary-dark: #2d22ca;
+$secondary: #ff0266;
+$secondary-dark: #e5015b;
+$tertiary: #ffde03;
+$tertiary-dark: #e5c702;
+$background: #f5f8fc;
+$surface: #fff;
+
+$white: #fff;
+$black: #000;
+
+$very-light: #efefef;
+$light: #eee;
+$mid-light: #ddd;
+$mid: #ccc;
+$mid-dark: #bbb;
+$dark: #222;
+
+$title-font: 'Bungee Inline', sans-serif;
+$light-font: 'Varela Round', sans-serif;
+$icon-font: "Material Icons", sans-serif;
+$regular-font: "Roboto", sans-serif;
+$bold-font: 'Montserrat', sans-serif;
+
+$size-gigantic: 180px;
+$size-huge: 120px;
+$size-extra-xl: 100px;
+$size-extra-large: 90px;
+$size-sub-extra-large: 80px;
+$size-larger: 60px;
+$size-large: 50px;
+$size-sub-large: 40px;
+$size: 25px;
+$size-mid: 20px;
+$size-small: 15px;
+$size-smaller: 10px;
+$size-mini: 5px;
+$size-nano: 2px;
+
+// --google-blue: #3367d6
+$colors: (
+    "primary": $primary,
+    "primary-dark": $primary-dark,
+    "secondary": $secondary,
+    "secondary-dark": $secondary-dark,
+    "tertiary": $tertiary,
+    "tertiary-dark": $tertiary-dark,
+    "background": $background,
+    "surface": $surface,
+    "transparent": transparent,
+
+    "white": $white,
+    "black": $black,
+
+    "very-light": $very-light,
+    "light": $light,
+    "mid-light": $mid-light,
+    "mid": $mid,
+    "mid-dark": $mid-dark,
+    "dark": $dark
+);
+
+$fonts: (
+    "title": $title-font,
+    "light": $light-font,
+    "icon": $icon-font,
+    "regular": $regular-font,
+    "bold": $bold-font
+);
+
+$sizes: (
+    "dull": 0 !important,
+    "gigantic": $size-gigantic,
+    "huge": $size-huge,
+    "extra-xl": $size-extra-xl,
+    "extra-large": $size-extra-large,
+    "sub-extra-large": $size-sub-extra-large,
+    "larger": $size-larger,
+    "large": $size-large,
+    "sub-large": $size-sub-large,
+    "default": $size,
+    "mid": $size-mid,
+    "small": $size-small,
+    "smaller": $size-smaller,
+    "mini": $size-mini,
+    "nano": $size-nano
+);
+
+@mixin propertyList($property, $prefix, $list, $action: "") {
+    @each $name, $value in $list {
+        @if str-length($action) > 0 {
+            &-#{$action}-#{$name}:#{$action},
+            &-#{$name}-#{$action}:#{$action},
+            &-#{$action}-#{$prefix}-#{$name}:#{$action},
+            &-#{$prefix}-#{$action}-#{$name}:#{$action},
+            &-#{$prefix}-#{$name}-#{$action}:#{$action} {
+                #{$property}: $value;
+            }
+        } @else {
+            &-#{$name},
+            &-#{$prefix}-#{$name} {
+                #{$property}: $value;
+            }
+        }
     }
 }
+
+@mixin colorList($property: color, $name: "color") {
+    @include propertyList($property, $name, $colors);
+    @include propertyList($property, $name, $colors, "hover");
+}
+
+@import "./components/base.scss";
+@import "./components/fonts.scss";
+@import "./components/header.scss";
+@import "./components/style.scss";
+@import "./components/icon.scss";
+@import "./components/layout.scss";
+@import "./components/layer.scss";
+@import "./components/transition.scss";
