--- a/views/app.pug
+++ b/views/app.pug
@@ -1,12 +1,170 @@
-<!DOCTYPE html>
+doctype html
 html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Document
-    body
-        //- - Shes alive
-        p= title
-        span= `${Alive}Ok what you mean`
-        h1 Ok this works wierdly enogh
+  head
+    meta(charset="UTF-8")
+    meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    meta(http-equiv='Accept-CH' content='DPR, Viewport-Width, Width')
+    meta(http-equiv='Content-Security-Policy', content=`default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/${cloud_name}/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests`)
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+
+    link(rel='dns-prefetch' href='https://polyfill.io/')
+    link(rel='preconnect' href='https://polyfill.io/')
+
+    link(rel='dns-prefetch' href='https://fonts.gstatic.com/')
+    link(rel='preconnect' href='https://fonts.gstatic.com/')
+
+    link(rel='dns-prefetch' href='https://cdnjs.cloudflare.com/')
+    link(rel='preconnect' href='https://cdnjs.cloudflare.com/')
+
+    if staticSite
+      link(rel='dns-prefetch' href=`https://res.cloudinary.com/${cloud_name}/`)
+      link(rel='preconnect' href=`https://res.cloudinary.com/${cloud_name}/`)
+
+    link(rel="preload" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=IntersectionObserver%2CHTMLPictureElement%2CIntersectionObserverEntry%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" as="script" async crossorigin="anonymous")
+
+    link(rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
+    link(rel="preload" href="https://fonts.gstatic.com/s/bungeeinline/v5/Gg8zN58UcgnlCweMrih332VuPGV_-Q.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
+    link(rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
+    link(rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
+    link(rel="preload" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
+    link(rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
+
+    //- link(rel="preload" href='./css/app.min.css' as="style" async)
+    //- link(rel="preload" href='./js/app.vendor.min.js' as="script" async)
+    script(src="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=IntersectionObserver%2CHTMLPictureElement%2CIntersectionObserverEntry%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" crossorigin="anonymous" async)
+
+
+    <!--[if lt IE 9]>
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js' async)
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js' async)
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js' async)
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js' async)
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js' async)
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js' async)
+    <![endif]-->
+
+    link(rel='stylesheet' href='./css/app.min.css' inline async)
+    <!--[if lt IE 10]>
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js' async)
+      script.
+        flexibility(document.documentElement);
+    <![endif]-->
+
+    script.
+      var check = function () {
+          "use strict";
+
+          if (typeof window.Symbol == "undefined") return false;
+          try {
+              Function("class Foo {}") ();
+              Function("let bar = x => x+1;") ();
+              Function("let bez = { a: 'b' }; let box = { b: 'a', ...bez };") ();
+          } catch (e) { return false; }
+
+          return true;
+      };
+
+      var _require = function (src, fn) {
+        var head = document.getElementsByTagName('head')[0];
+        var script = document.createElement('script');
+        script.setAttribute("async", "");
+        script.type = 'text/javascript';
+        script.onload = fn;
+        script.onreadystatechange = function () {
+            if (this.readyState === 'complete') { fn(); }
+        };
+        script.src = src;
+        head.appendChild(script);
+      };
+
+      if (/msie|trident|edge/g.test(navigator.userAgent.toLowerCase()) || !check()) {
+        _require("https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js", function () {
+          //- flexibility(document.documentElement);
+        });
+        _require("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js");
+        _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js");
+        _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js");
+        document.write('<link rel="preload" href="./js/app.min.js" as="script" async="async" />');
+       } else {
+        document.write('<link rel="preload" href="./js/app.modern.min.js" as="script" async="async" />');
+       }
+
+    //- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js")
+    //- script(src="https://cdnjs.cloudflare.com/ajax/libs/smoothState.js/0.7.2/jquery.smoothState.min.js")
+
+    //- link(rel='preconnect' href='https://polyfill.io/v3/')
+    //- link(rel='dns-prefetch' href='https://fonts.googleapis.com')
+    //- link(rel='stylesheet' async href='https://fonts.googleapis.com/css?family=Bungee+Inline|Varela+Round:400|Montserrat:700,800|Roboto:400,600|Material+Icons&display=swap')
+
+    title= page.title
+
+    include ./components/header.pug
+    include ./components/layer.pug
+    include ./components/layout.pug
+    include ./components/section.pug
+    include ./components/hero.pug
+    include ./components/footer.pug
+  body
+    //- Navbar etc...
+    +header(page)
+
+    mixin sectionView(section)
+      if typeof section == "object"
+        +section(section)
+
+    mixin layoutView(layout)
+      if typeof layout == "object"
+        - let sectionList = layout.values;
+        - let section = layout.section;
+        +layout(layout)
+          +sectionView(section)
+
+          if Array.isArray(sectionList)
+            each sections in sectionList
+              - let section = sections.section;
+                +sectionView(section)
+
+    .header-top-spot
+    main.main#swup.transition-fade
+      - let layerLists = page.values;
+
+      //- Page Layers
+      if Array.isArray(layerLists)
+        each layers in layerLists
+          - let layer = layers.layer;  //- Display Custom Layer if it exists
+          - let hero = layers.hero; //- Display Hero Layer if it exists
+
+          if typeof hero == "object"
+            +hero(hero)
+
+          if typeof layer == "object"
+            - let layout = layer.layout;
+            - let layoutList = layer.values;
+            +layer(layer)
+              +layoutView(layout)
+
+              if Array.isArray(layoutList)
+                each layouts in layoutList
+                  - let layout = layouts.layout;
+                  +layoutView(layout)
+
+    .layer-action-center.layer-action-center-show
+      article
+        .layout-flex.layout-padding-horz
+          section.layout-spacer
+          section
+            button#back-to-top.btn.layer-round.layout-padding-small.layer-surface.layer-shadow.layer-secondary-hover.style-secondary.style-hover-black(tabindex='1', type='button')
+              span.btn-group
+                i.icon.style-font-sz-24 expand_less
+
+            if page.noFooter
+              button.copyright-btn#swup.btn.btn-default.layer-round.layout-padding-small.layer-surface.layer-shadow.layer-secondary-hover.style-secondary.style-hover-black(tabindex='0', type='button')
+                span.btn-group.style-font-sz-24
+                  i.icon copyright
+                  span.btn-spacer
+                  span.btn-content 2019 Okiki Ojo
+
+    if !page.noFooter
+      +footer("Made with ❤ by Okiki Ojo.")
+
+    script(src=`${dev ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` inline defer)
