--- a/views/components/header.pug
+++ b/views/components/header.pug
@@ -10,7 +10,7 @@ mixin header(_page)
       article.layout-contain.navbar-layout
         section.navbar-head
           +link({
-            href: "/" + (dev && staticSite ? "index.html" : ""),
+            href: "/" + (dev && staticSite ? "index.html" : "index"),
             class: "navbar-title",
             content: "JOSEPH!"
           })
