--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -5,20 +5,23 @@ mixin image(value)
   - let _alt = _value.alt || "Alternate text";
   .layer-image(class=_class)
     .load-img
-      picture
-        source(media='(min-width: 500px)' srcset!=`${_src}.webp?w=500&quality=70` type='image/webp')
-        source(media='(min-width: 500px)' srcset!=`${_src}.jpg?w=500&quality=70` type='image/jpeg')
+      .img-contain
+        picture
+          source(media='(max-width: 500px)' srcset!=`${_src}.webp?w=500&quality=70` type='image/webp')
+          source(media='(max-width: 500px)' srcset!=`${_src}.jpg?w=500&quality=70` type='image/jpeg')
 
-        source(media='(min-width: 700px)' srcset!=`${_src}.webp?w=700` type='image/webp')
-        source(media='(min-width: 700px)' srcset!=`${_src}.jpg?w=700` type='image/jpeg')
+          source(media='(max-width: 700px)' srcset!=`${_src}.webp?w=700` type='image/webp')
+          source(media='(max-width: 700px)' srcset!=`${_src}.jpg?w=700` type='image/jpeg')
 
-        source(media='(min-width: 900px)' srcset!=`${_src}.webp?w=900` type='image/webp')
-        source(media='(min-width: 900px)' srcset!=`${_src}.jpg?w=900` type='image/jpeg')
+          source(media='(max-width: 900px)' srcset!=`${_src}.webp?w=900` type='image/webp')
+          source(media='(max-width: 900px)' srcset!=`${_src}.jpg?w=900` type='image/jpeg')
 
-        source(media='(max-width: 900px)' srcset!=`${_src}.webp` type='image/webp')
-        img.core-img(src!=`${_src}.jpg` alt=_alt)
-      picture
-        img.placeholder-img(src!=`${_src}.jpg?w=100&quality=100&effect=blur:150`, alt=_alt inline)
+          source(media='(min-width: 900px)' srcset!=`${_src}.webp` type='image/webp')
+          img.core-img(src!=`${_src}.jpg` alt=_alt)
+        picture
+          img.placeholder-img(src!=`${_src}.jpg?w=100&quality=100&effect=blur:150`, alt=_alt inline)
+        noscript Javascript is necesscary for an amazing experience.
+          img.core-img(src!=`${_src}.jpg` alt=_alt)
 
 
 mixin link(value)
@@ -27,7 +30,7 @@ mixin link(value)
   - let _class = _value.class;
   - let _href = _value.href;
 
-  a(href=_href class=_class)= _content
+  a(href=_href class=_class tabindex="0")= _content
     block
 
 
