--- a/views/app.pug
+++ b/views/app.pug
@@ -4,8 +4,10 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(http-equiv='Accept-CH' content='DPR, Viewport-Width, Width')
-    meta(http-equiv='Content-Security-Policy', content=`default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/${cloud_name}/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests`)
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(http-equiv='Content-Security-Policy' content=`default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/${cloud_name}/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests`)
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(name='Description' content='The porfolio of Joseph, it contains all amazing projects etc...')
+
     link(rel='preconnect' href='https://polyfill.io/')
     link(rel='preconnect' href='https://fonts.gstatic.com/')
     link(rel='preconnect' href='https://cdnjs.cloudflare.com/')
