--- a/views/components/header.pug
+++ b/views/components/header.pug
@@ -11,18 +11,18 @@ mixin header(_page)
         section.navbar-head
           +link({
             href: "/" + (dev && staticSite ? "index.html" : "index"),
-            class: "navbar-title",
+            class: "navbar-title style-primary style-primary-hover",
             content: "JOSEPH!"
           })
           section.layout-spacer
           section.navbar-foot.navbar-mobile
-            button.navbar-menu.btn.layer-round.layout-padding-smaller.layer-transparent.layer-secondary-hover.style-secondary.style-hover-black(tabindex='-1', type='button' title="Menu Bar")
+            button.navbar-menu.btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary(tabindex='-1', type='button' title="Menu Bar")
               span.btn-group
-                i.navbar-menu.icon.style-font-family-bold.style-black.style-font-sz-24 menu
+                i.navbar-menu.icon.style-font-family-bold.style-font-sz-24 menu
 
         section.layout-spacer.navbar-desktop
         section.navbar-main
-          ul.navbar-list
+          ul.navbar-list#swup
             each tab in _tabs
               - let _link = tab.a;
               - let _href = _link.href;
