--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -28,7 +28,7 @@
 */
 
 /* -- Fonts -- */
-/*!
+/*
     * font-family: 'Montserrat', sans-serif;
     * font-family: 'Varela Round', sans-serif;
     * font-family: 'Bungee Inline', sans-serif;
