--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -148,6 +148,7 @@ $sizes: (
 @mixin colorList($property: color, $name: "color") {
     @include propertyList($property, $name, $colors);
     @include propertyList($property, $name, $colors, "hover");
+    @include propertyList($property, $name, $colors, "focus");
 }
 
 @import "./components/base.scss";
