--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -17,11 +17,11 @@ mixin image(value)
           source(media='(max-width: 900px)' srcset!=`${_src}.jpg?w=900` type='image/jpeg')
 
           source(media='(min-width: 900px)' srcset!=`${_src}.webp` type='image/webp')
-          img.core-img(src!=`${_src}.jpg` alt=_alt)
+          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy")
         picture
-          img.placeholder-img(src!=`${_src}.jpg?w=100&quality=100&effect=blur:150`, alt=_alt inline)
+          img.placeholder-img(src!=`${_src}.jpg?w=100&quality=100&effect=blur:150`, alt=_alt inline loading="eager")
         noscript Javascript is necesscary for an amazing experience.
-          img.core-img(src!=`${_src}.jpg` alt=_alt)
+          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy")
 
 
 mixin link(value)
