--- a/views/components/header.pug
+++ b/views/components/header.pug
@@ -11,7 +11,7 @@ mixin header(_page)
         section.navbar-head
           +link({
             href: "/" + (dev && staticSite ? "index.html" : "index"),
-            class: "navbar-title style-primary style-primary-hover",
+            class: "navbar-title style-primary style-primary-dark-hover style-primary-focus",
             content: "JOSEPH!"
           })
           section.layout-spacer
