--- a/views/app.pug
+++ b/views/app.pug
@@ -15,7 +15,6 @@ html(lang="en")
     if staticSite
       link(rel='preconnect' href=`https://res.cloudinary.com/${cloud_name}/`)
 
-    //- link(rel="preload" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=IntersectionObserver%2CHTMLPictureElement%2CIntersectionObserverEntry%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" as="script" async crossorigin="anonymous")
     link(rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
     link(rel="preload" href="https://fonts.gstatic.com/s/bungeeinline/v5/Gg8zN58UcgnlCweMrih332VuPGV_-Q.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
     link(rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
@@ -24,7 +23,7 @@ html(lang="en")
     link(rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
 
     //- link(rel="preload" href='./css/app.min.css' as="style" async)
-    //- link(rel="preload" href='./js/app.vendor.min.js' as="script" async)
+    //- link(rel="prefetch" href='./js/app.vendor.min.js' as="script" async)
 
     link(rel='stylesheet' href='./css/app.min.css' inline async)
     <!--[if lt IE 9]>
@@ -77,7 +76,9 @@ html(lang="en")
 
     //- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js")
     //- script(src="https://cdnjs.cloudflare.com/ajax/libs/smoothState.js/0.7.2/jquery.smoothState.min.js")
-
+    //- link(rel="preload" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=IntersectionObserver%2CHTMLPictureElement%2CIntersectionObserverEntry%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" as="script" async crossorigin="anonymous")
+    //- link(rel="preload" href='./js/app.modern.min.js' as="script" async crossorigin="anonymous")
+    
     //- link(rel='preconnect' href='https://polyfill.io/v3/')
     //- link(rel='dns-prefetch' href='https://fonts.googleapis.com')
     //- link(rel='stylesheet' async href='https://fonts.googleapis.com/css?family=Bungee+Inline|Varela+Round:400|Montserrat:700,800|Roboto:400,600|Material+Icons&display=swap')
@@ -93,6 +94,16 @@ html(lang="en")
   body
     //- Navbar etc...
     +header(page)
+
+    style. 
+      .anim {
+        background: orange;
+        width: 40px;
+        height: 40px;
+        display: block;
+      }
+
+    .anim
 
     mixin sectionView(section)
       if typeof section == "object"
