--- a/src/scss/components/transition.scss
+++ b/src/scss/components/transition.scss
@@ -9,4 +9,16 @@
         opacity: 0 !important;
     }
 }
+
+.layer {
+    // transition: opacity .55s ease-out, transform .55s ease-out;
+    transform: translateY(55px);
+    opacity: 0;
+    // will-change: opacity, transform;
+
+    // &.transtion {
+    //     transform: translateY(0px) !important;
+    //     opacity: 1 !important;
+    // }
+}
 /*! purgecss end ignore */
