--- a/src/scss/components/transition.scss
+++ b/src/scss/components/transition.scss
@@ -12,8 +12,8 @@
 
 .layer {
     // transition: opacity .55s ease-out, transform .55s ease-out;
-    transform: translateY(55px);
-    opacity: 0;
+    // transform: translateY(55px);
+    // opacity: 0;
     // will-change: opacity, transform;
 
     // &.transtion {
