--- a/src/scss/components/transition.scss
+++ b/src/scss/components/transition.scss
@@ -10,7 +10,7 @@
     }
 }
 
-.layer {
+// .layer {
     // transition: opacity .55s ease-out, transform .55s ease-out;
     // transform: translateY(55px);
     // opacity: 0;
@@ -20,5 +20,5 @@
     //     transform: translateY(0px) !important;
     //     opacity: 1 !important;
     // }
-}
+// }
 /*! purgecss end ignore */
