--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -6,7 +6,7 @@ mixin hero(value)
   - let _image = _value.img;
 
   section.layer
-    article.layout-contain.layout-padding-horz-small.layout-padding-bottom.layout-padding-dull-top
+    article.layout-contain-larger.layout-padding-horz-small.layout-padding-bottom.layout-padding-dull-top
       .layer-hero
         +image(_image)
 
