Fixing elongated look

--- a/views/components/header.pug
+++ b/views/components/header.pug
@@ -7,7 +7,7 @@ mixin header(_page)
 
   header.header
     nav.navbar.navbar-fixed
-      article.layout-contain.navbar-layout
+      article.layout-contain-large.navbar-layout
         section.navbar-head
           +link({
             href: "/" + (dev && staticSite ? "index.html" : "index"),
