Its now an official PWA

--- a/views/app.pug
+++ b/views/app.pug
@@ -8,6 +8,7 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(name='Description' content='The porfolio of Joseph, it contains all amazing projects etc...')
 
+    link(rel='manifest', href='manifest.json')
     link(rel='preconnect' href='https://polyfill.io/')
     link(rel='preconnect' href='https://fonts.gstatic.com/')
     link(rel='preconnect' href='https://cdnjs.cloudflare.com/')
