--- a/views/app.pug
+++ b/views/app.pug
@@ -5,6 +5,7 @@ html(lang="en")
     meta(http-equiv='Accept-CH' content='DPR, Viewport-Width, Width')
     meta(http-equiv='Cache-Control' content='public, max-age=31536000')
     meta(http-equiv='Content-Security-Policy' content=`default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/${cloud_name}/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests`)
+    meta(name='theme-color', content='#4500ff')
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(name='Description' content='The porfolio of Joseph, it contains all amazing projects etc...')
 
