Update node and yarn, and PWA is now functional

--- a/views/app.pug
+++ b/views/app.pug
@@ -114,7 +114,7 @@ html(lang="en")
                 +sectionView(section)
 
     .header-top-spot
-      button.add-button.btn.layer-round.layout-margin-large.layout-padding-small-horz.layout-padding-smaller-vert.layer-primary.layer-primary-dark-hover.style-secondary.style-hover-secondary-dark(tabindex='0', type='button')
+      button.add-button.btn.layer-round.layout-margin-large.layout-padding-small-horz.layout-padding-smaller-vert.layer-primary.layer-primary-dark-hover.style-tertiary.style-hover-tertiary-dark(tabindex='0', type='button')
         span.btn-group.style-font-sz-24
           i.icon file_download
           span.btn-spacer
