Added favicon.ico, and other icons etc...

--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -17,11 +17,11 @@ mixin image(value)
           source(media='(max-width: 900px)' srcset!=`${_src}.jpg?w=900` type='image/jpeg')
 
           source(media='(min-width: 900px)' srcset!=`${_src}.webp` type='image/webp')
-          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy")
+          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="auto")
         picture
           img.placeholder-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150`, alt=_alt inline loading="auto")
         noscript Javascript is necesscary for an amazing experience.
-          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy")
+          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="auto")
 
 
 mixin link(value)
