--- a/views/app.pug
+++ b/views/app.pug
@@ -5,17 +5,32 @@ html(lang="en")
     meta(http-equiv='Accept-CH' content='DPR, Viewport-Width, Width')
     meta(http-equiv='Cache-Control' content='public, max-age=31536000')
     meta(http-equiv='Content-Security-Policy' content=`default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/${cloud_name}/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests`)
-    meta(name='theme-color', content='#4500ff')
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(name='Description' content='The porfolio of Joseph, it contains all amazing projects etc...')
 
-    link(rel='manifest', href='manifest.webmanifest')
+    link(rel='preconnect' href=`https://res.cloudinary.com/${cloud_name}/`)
     link(rel='preconnect' href='https://polyfill.io/')
     link(rel='preconnect' href='https://fonts.gstatic.com/')
     link(rel='preconnect' href='https://cdnjs.cloudflare.com/')
 
-    if staticSite
-      link(rel='preconnect' href=`https://res.cloudinary.com/${cloud_name}/`)
+    link(rel='apple-touch-icon', sizes='57x57', href='/apple-icon-57x57.png')
+    link(rel='apple-touch-icon', sizes='60x60', href='/apple-icon-60x60.png')
+    link(rel='apple-touch-icon', sizes='72x72', href='/apple-icon-72x72.png')
+    link(rel='apple-touch-icon', sizes='76x76', href='/apple-icon-76x76.png')
+    link(rel='apple-touch-icon', sizes='114x114', href='/apple-icon-114x114.png')
+    link(rel='apple-touch-icon', sizes='120x120', href='/apple-icon-120x120.png')
+    link(rel='apple-touch-icon', sizes='144x144', href='/apple-icon-144x144.png')
+    link(rel='apple-touch-icon', sizes='152x152', href='/apple-icon-152x152.png')
+    link(rel='apple-touch-icon', sizes='180x180', href='/apple-icon-180x180.png')
+    link(rel='icon', type='image/png', sizes='192x192', href='/android-icon-192x192.png')
+    link(rel='icon', type='image/png', sizes='32x32', href='/favicon-32x32.png')
+    link(rel='icon', type='image/png', sizes='96x96', href='/favicon-96x96.png')
+    link(rel='icon', type='image/png', sizes='16x16', href='/favicon-16x16.png')
+    link(rel='manifest', href='manifest.webmanifest')
+
+    meta(name='theme-color', content='#4500ff')
+    meta(name='msapplication-TileColor', content='#4500ff')
+    meta(name='msapplication-TileImage', content='/ms-icon-144x144.png')
 
     link(rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
     link(rel="preload" href="https://fonts.gstatic.com/s/bungeeinline/v5/Gg8zN58UcgnlCweMrih332VuPGV_-Q.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
