--- a/views/app.pug
+++ b/views/app.pug
@@ -1,7 +1,8 @@
 doctype html
 html(lang="en")
   head
-    meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
+    meta(charset='utf-8')
+    meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(http-equiv='Accept-CH' content='DPR, Viewport-Width, Width')
     meta(http-equiv='Cache-Control' content='public, max-age=31536000')
     meta(http-equiv='Content-Security-Policy' content=`default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/${cloud_name}/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests`)
@@ -26,7 +27,7 @@ html(lang="en")
     link(rel='icon', type='image/png', sizes='32x32', href='/favicon-32x32.png')
     link(rel='icon', type='image/png', sizes='96x96', href='/favicon-96x96.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/favicon-16x16.png')
-    link(rel='manifest', href='manifest.webmanifest')
+    link(rel='manifest', href='manifest.json')
 
     meta(name='theme-color', content='#4500ff')
     meta(name='msapplication-TileColor', content='#4500ff')
@@ -109,68 +110,101 @@ html(lang="en")
     include ./components/hero.pug
     include ./components/footer.pug
   body
-    //- Navbar etc...
-    +header(page)
+    if !dev
+      //- Navbar etc...
+      +header(page)
 
-    mixin sectionView(section)
-      if typeof section == "object"
-        +section(section)
+      mixin sectionView(section)
+        if typeof section == "object"
+          +section(section)
 
-    mixin layoutView(layout)
-      if typeof layout == "object"
-        - let sectionList = layout.values;
-        - let section = layout.section;
-        +layout(layout)
-          +sectionView(section)
+      mixin layoutView(layout)
+        if typeof layout == "object"
+          - let sectionList = layout.values;
+          - let section = layout.section;
+          +layout(layout)
+            +sectionView(section)
 
-          if Array.isArray(sectionList)
-            each sections in sectionList
-              - let section = sections.section;
-                +sectionView(section)
+            if Array.isArray(sectionList)
+              each sections in sectionList
+                - let section = sections.section;
+                  +sectionView(section)
 
-    .header-top-spot
-    main.main#swup.transition-fade
-      - let layerLists = page.values;
+      .header-top-spot
+      main.main#swup.transition-fade
+        - let layerLists = page.values;
 
-      //- Page Layers
-      if Array.isArray(layerLists)
-        each layers in layerLists
-          - let layer = layers.layer;  //- Display Custom Layer if it exists
-          - let hero = layers.hero; //- Display Hero Layer if it exists
+        //- Page Layers
+        if Array.isArray(layerLists)
+          each layers in layerLists
+            - let layer = layers.layer;  //- Display Custom Layer if it exists
+            - let hero = layers.hero; //- Display Hero Layer if it exists
 
-          if typeof hero == "object"
-            +hero(hero)
+            if typeof hero == "object"
+              +hero(hero)
 
-          if typeof layer == "object"
-            - let layout = layer.layout;
-            - let layoutList = layer.values;
-            +layer(layer)
-              +layoutView(layout)
+            if typeof layer == "object"
+              - let layout = layer.layout;
+              - let layoutList = layer.values;
+              +layer(layer)
+                +layoutView(layout)
 
-              if Array.isArray(layoutList)
-                each layouts in layoutList
-                  - let layout = layouts.layout;
-                  +layoutView(layout)
+                if Array.isArray(layoutList)
+                  each layouts in layoutList
+                    - let layout = layouts.layout;
+                    +layoutView(layout)
 
-    .layer-action-center.layer-action-center-show
-      article
-        .layout-flex.layout-padding-horz
-          section.layout-spacer
-          section
-            button#back-to-top.btn.layer-round.layout-padding-small.layer-surface.layer-shadow.layer-secondary-hover.style-secondary.style-hover-black(tabindex='0', type='button')
-              span.btn-group
-                i.icon.style-font-sz-24 expand_less
+      .layer-action-center.layer-action-center-show
+        article
+          .layout-flex.layout-padding-horz
+            section.layout-spacer
+            section
+              button#back-to-top.btn.layer-round.layout-padding-small.layer-surface.layer-shadow.layer-secondary-hover.style-secondary.style-hover-black(tabindex='0', type='button')
+                span.btn-group
+                  i.icon.style-font-sz-24 expand_less
 
-            if page.noFooter
-              button.copyright-btn#swup.btn.btn-default.layer-round.layout-padding-small.layer-surface.layer-shadow.layer-secondary-hover.style-secondary.style-hover-black(tabindex='0', type='button')
-                span.btn-group.style-font-sz-24
-                  i.icon copyright
-                  span.btn-spacer
-                  span.btn-content 2019 Okiki Ojo
+              if page.noFooter
+                button.copyright-btn#swup.btn.btn-default.layer-round.layout-padding-small.layer-surface.layer-shadow.layer-secondary-hover.style-secondary.style-hover-black(tabindex='0', type='button')
+                  span.btn-group.style-font-sz-24
+                    i.icon copyright
+                    span.btn-spacer
+                    span.btn-content 2019 Okiki Ojo
 
-    if !page.noFooter
-      +footer("Made with ❤ by Okiki Ojo.")
+      if !page.noFooter
+        +footer("Made with ❤ by Okiki Ojo.")
+    else
+      section.layer
+        - let _src = "/assets/josephojo-logo";
+        - let _alt = "Assets city";
+        .layer-image(class=_class)
+          .load-img
+            .img-contain.layout-contain.layout-contain-slim
+              picture
+                img(src!=`${_src}.jpg?quality=100`, alt=_alt inline loading="lazy")
+              noscript Javascript is necesscary for an amazing experience.
+                img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="auto")
+
+        - _src = "/assets/mountains";
+        - _alt = "Assets city";
+        .layer-image(class=_class)
+          .load-img
+            .img-contain
+              picture
+                source(srcset!=`${_src}.webp?w=50&quality=100&effect=blur:150` type='image/webp')
+                img.core-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150` alt=_alt inline width="auto" loading="lazy")
+              picture
+                img.placeholder-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150`, alt=_alt inline loading="lazy")
+              noscript Javascript is necesscary for an amazing experience.
+                img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="auto")
+
+        article.layout-contain 
+          section.layout.layout-shorten.layer-overflow-hide.layer-max-height.layout-flex.layout-align-items-center.layout-justify-content-start
+            section
+              h3.style-secondary-dark.style-font-title.style-uppercase.layout-margin-dull-vert.layout-padding-vert-mini Joseph
+              h1.style-white.style-bold.layer-title.style-uppercase.layout-margin-dull-vert-top Coming SOON 
+              h5.style-white.style-line-height.style-capital.layer-content-detail This website is currently in development. We are working day and night.
 
     script(src='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=IntersectionObserver%2CHTMLPictureElement%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent' crossorigin='anonymous' async)
-
-    script(src=`${debug && false ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` inline defer)
+    script(src=`${debug ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` inline defer)
+    if !dev
+      script(src=`./js/store.min.js` inline defer)
