--- a/views/app.pug
+++ b/views/app.pug
@@ -173,7 +173,7 @@ html(lang="en")
       if !page.noFooter
         +footer("Made with ❤ by Okiki Ojo.")
     else
-      section.layer
+      section.layer.layer-dark
         article.layout-contain
           section.layout.layout-shorten.layer-overflow-hide.layer-max-height.layout-flex.layout-align-items-center.layout-justify-content-start
             section
