--- a/src/scss/components/style.scss
+++ b/src/scss/components/style.scss
@@ -16,6 +16,22 @@
                font-size: #{$sz}px;
             }
          }
+            
+         $screenSizes: (
+            "desktop": $screen-size-desktop, 
+            "laptop": $screen-size-laptop, 
+            "tablet": $screen-size-tablet, 
+            "phone": $screen-size-phone
+         );
+         @each $device-type, $screen-size in $screenSizes {
+            @media #{$screen-size} {
+               @for $sz from 8 through 150 {
+                  &-#{$device-type}-#{$sz} {
+                     font-size: #{$sz}px;
+                  }
+               }
+            }
+         }
       }
 
       @include propertyList(font-size, "sz", $sizes);
