--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -104,7 +104,7 @@
         }
 
         // Mobile navbar settings
-        @media (max-width: 660px) {
+        @media #{$screen-size-tablet} {
             &-layout,
             &-list {
                 flex-direction: column;
@@ -167,7 +167,7 @@
         }
 
         // Desktop navbar settings
-        @media (min-width: 660px) {
+        @media (min-width: $tablet) {
             &-layout {
                 padding: 0 $size;
                 display: flex;
